Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19075

Error message in case of couchstore open failure results in empty file string printed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 3.1.5
    • 3.0.2
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      In case of a couchstore open failure, we print the error message pertaining to the failure as follows

      Mon Mar 21 22:34:48.051344 PDT 3: (prod1_cse) Warning: failed to open database for data fetch, vBucketId = 54 file = numDocs = 1

      Note that we print an empty file because the string to print the file isn't being populated. The file string is already populated in the following message:

      Mon Mar 21 22:34:48.051000 PDT 3: (prod1_cse) Warning: couchstore_open_db failed, name=/opt/couchbase/var/lib/couchbase/data/prod1_cse/54.couch.1 option=2 rev=1 error=no such file [errno = 2: 'No such file or directory']

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-19075
          # Subject Branch Project Status CR V

          Activity

            People

              ericcooper Eric Cooper (Inactive)
              sriram Sriram Ganesan (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  PagerDuty